--- a/index.html
+++ b/index.html
@@ -247,15 +247,15 @@
   <div class="dashboard-tooltip">
     🔍 <strong>Step 1:</strong> Enter any IP address, domain, URL, or hash into the search bar.<br>
     ➕ <strong>Step 2:</strong> Click the <code>ADD</code> button. This will:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;🔗 Automatically append your input to each relevant OSINT tool’s URL.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;📌 Update all tool cards with active links based on your query.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;• Automatically append your input to each relevant OSINT tool’s URL.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;• Update all tool cards with active links based on your query.<br>
 	⚡ <strong>Step 3:</strong> Now simply click any tool to open it in a new tab – each one is already preloaded with your search input!<br><br>
 	
-	✋ <strong>Bonus:</strong> You can <u>reorder cards</u> by dragging and dropping them within or between categories.<br>
-    💾 Changes are saved automatically in your browser (locally).<br><br>
-	💡 Use the Filter bar below to quickly narrow down tools by name or purpose (e.g., “threat”, “email”, “dns”).<br>
-    🧭 Double-click the filter to reset it.<br>
-	🔒 Some tools don’t use input and are skipped automatically.
+	 • <strong>Bonus:</strong> You can <u>reorder cards</u> by dragging and dropping them within or between categories.<br>
+     • Changes are saved automatically in your browser (locally).<br><br>
+	 • Use the Filter bar below to quickly narrow down tools by name or purpose (e.g., “threat”, “email”, “dns”).<br>
+     • Double-click the filter to reset it.<br>
+	 • Some tools don’t use input and are skipped automatically.
   </div>
 </div>
 
