--- a/index.html
+++ b/index.html
@@ -497,6 +497,8 @@
     
     { name:'CyberChef', url:'https://gchq.github.io/CyberChef/', desc:'CyberChef', skipSearch: true},
 	
+	{ name:'Polyswarm', url:'https://polyswarm.network/scan', desc:'Scan Files or URLs for threats', skipSearch: true},
+	
     { name:'ThreatView', url:'https://threatview.io/', desc:'Actionable cyber threat intelligence feeds', skipSearch: true},
 	
     { name:'PhishTank', url:'https://www.phishtank.com/', desc:'Found a phishing site? ', skipSearch: true},
@@ -607,6 +609,13 @@
 		url: "https://lolbas-project.github.io/",
 		desc: "Living Off the Land Binaries and Scripts" , skipSearch: true
 	  },
+	  
+	  {
+		name: "GTFOBins",
+		url: "https://gtfobins.github.io/",
+		desc: "GTFOBins is a curated list of Unix binaries that can be used to bypass local security restrictions in misconfigured systems." , skipSearch: true
+	  },
+	  
 	  {
 		name: "Echotrail",
 		url: "https://www.echotrail.io/insights",
