--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
      • Changes are saved automatically in your browser (locally).<br><br>
 	 • Use the Filter bar below to quickly narrow down tools by name or purpose (e.g., “threat”, “email”, “dns”).<br>
      • Double-click the filter to reset it.<br>
-	 • Some tools don’t use input and are skipped automatically.
+	 • Tools marked with 🔶 work standalone and do not reflect search queries from the dashboard.
   </div>
 </div>
 
